--- a/supabase-redirect/index.html
+++ b/supabase-redirect/index.html
@@ -4,28 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Redirecting…</title>
-    <style>body{font-family:system-ui,Arial,sans-serif;display:flex;align-items:center;justify-content:center;height:100vh;margin:0;background:#fff;color:#111}code{word-break:break-all;background:#f3f4f6;padding:6px;border-radius:6px;display:block;margin-top:8px}</style>
     <script>
       (function () {
-        // Read the fragment (preferred) or query string and forward it to the app
-        const fragment = window.location.hash || (window.location.search ? '#' + window.location.search.slice(1) : '');
-        const targetScheme = 'sovrnmobile://auth';
-        const target = targetScheme + fragment;
-
-        // Try to navigate to the app (this will succeed on mobile devices that support custom schemes)
+        // Forward to the dedicated redirector while preserving query and fragment
+        const search = window.location.search || '';
+        const hash = window.location.hash || '';
+        const target = '/supabase-redirect' + search + hash;
+        // Use replace() so this URL doesn't stay in history
         window.location.replace(target);
 
-        // If not redirected within ~500ms, show a manual link and the fragment so user/tester can copy it
+        // Fallback: show a link if auto-redirect fails
         setTimeout(function () {
           document.body.innerHTML = `
-            <div style="max-width:680px;margin:auto;text-align:left;padding:20px">
-              <h2 style="margin-top:0">Open the Sovrn app</h2>
-              <p>If you are not redirected automatically, <a href="${target}">tap here to open the app</a>.</p>
-              <p style="font-size:13px;color:#666">If this doesn't work, copy the link below into your phone's browser or forward it to your device:</p>
-              <code>${target}</code>
-              <p style="margin-top:12px;color:#444">Raw fragment received from Supabase (for debugging):</p>
-              <code id="frag">${fragment || '(none)'}</code>
-              <p style="margin-top:16px;font-size:12px;color:#666">Note: tokens shown in the fragment are sensitive. Do not share them publicly.</p>
+            <div style="font-family:system-ui,Arial,sans-serif;padding:24px;max-width:680px;margin:auto">
+              <h2>Redirecting…</h2>
+              <p>If you are not redirected automatically, <a href="${target}">click here</a> to continue.</p>
+              <p style="font-size:12px;color:#666">This page forwards query & fragment to <code>/supabase-redirect</code>.</p>
             </div>
           `;
         }, 500);
